// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query.otherBids GET_BIDS id: cory.mcaboy@gmail.com 1`] = `
Object {
  "data": Object {
    "otherBids": Object {
      "cursor": null,
      "id": "cory.mcaboy@gmail.comb",
      "list": Array [],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Query.otherBids GET_BIDS no params 1`] = `
Object {
  "data": Object {
    "otherBids": Object {
      "cursor": null,
      "id": "undefinedb",
      "list": Array [],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Query.user CHECK_EMAIL id: cory.mcaboy@gmail.com 1`] = `
Object {
  "data": Object {
    "user": Object {
      "email": "cory.mcaboy@gmail.com",
      "id": "cory.mcaboy@gmail.com",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Query.user CHECK_EMAIL no params 1`] = `
Object {
  "data": Object {
    "user": Object {
      "email": "cory.mcaboy@gmail.com",
      "id": "cory.mcaboy@gmail.com",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Query.user GET_BIDS id: cory.mcaboy@gmail.com 1`] = `
Object {
  "data": Object {
    "otherBids": Object {
      "cursor": null,
      "id": "cory.mcaboy@gmail.comb",
      "list": Array [],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Query.user GET_BIDS no params 1`] = `
Object {
  "data": Object {
    "otherBids": Object {
      "cursor": null,
      "id": "undefinedb",
      "list": Array [],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Query.user GET_DATES 1`] = `
Object {
  "data": Object {
    "user": Object {
      "dateRequests": Object {
        "id": "cory.mcaboy@gmail.comd",
        "list": Array [
          Object {
            "creationTime": 1544376921,
            "datetimeOfDate": 1545849000,
            "description": "dsfds dsfsdf dsfsdf sd",
            "id": "0f4862f2-4618-42aa-a847-2d7c1e86922c",
            "num_bids": 1,
            "open": true,
          },
          Object {
            "creationTime": 1544376748,
            "datetimeOfDate": 1545417120,
            "description": "fsdf sdfsdf sdf",
            "id": "2625d5ad-1c9a-4096-aadb-c3aacbd75501",
            "num_bids": 1,
            "open": true,
          },
          Object {
            "creationTime": 1544886272,
            "datetimeOfDate": 1545391800,
            "description": "dsfds fds fds ",
            "id": "448f3f32-37c5-4507-884b-c5e9a0b18f09",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544390241,
            "datetimeOfDate": 1545330600,
            "description": "FD dsf DS fsdf sdf sd",
            "id": "f0407713-333c-406e-afb2-27f6e91a29f8",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544376851,
            "datetimeOfDate": 1545330600,
            "description": "dsfsdf sdff dsfsdf sd",
            "id": "91a28c7e-2dc4-4126-9b3f-319415eff62a",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544375992,
            "datetimeOfDate": 1545330600,
            "description": "dfsfdsfsd sdfds ",
            "id": "8190e10d-5a5a-48fc-98c1-c5ac375fa498",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544889092,
            "datetimeOfDate": 1545318000,
            "description": "Dead dsf dsf s",
            "id": "b070ae71-7b69-471f-b302-cfffb0544d1f",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544886462,
            "datetimeOfDate": 1545305400,
            "description": "dfdsf DS fdsf s",
            "id": "79d6eff1-0c30-4eea-87f5-dad88a6c7255",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544886387,
            "datetimeOfDate": 1545305400,
            "description": "dfds fdsf DS fsd",
            "id": "6f4cb143-263e-40f0-899c-095d457f3fa9",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544886638,
            "datetimeOfDate": 1545301500,
            "description": "fdfd fdfd sdf dsf sdf s",
            "id": "234beb5d-fdb9-4d6c-b56b-a395cc0efe6a",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544378499,
            "datetimeOfDate": 1545244200,
            "description": "if dsfdsf dsfdsf sd",
            "id": "5eca66c4-8460-4f71-b3d7-03a4f48cae99",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544886519,
            "datetimeOfDate": 1545219000,
            "description": "fds sdf dsfds DS fds sd",
            "id": "4f01717a-946f-4651-8106-201173525733",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544395123,
            "datetimeOfDate": 1544898600,
            "description": "sdfs dfdsf ds",
            "id": "22ab8c44-74c1-4abc-8d81-6ce70b1cb1ea",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544376472,
            "datetimeOfDate": 1544898600,
            "description": "fdsfds for sdf ds",
            "id": "392363cd-caa5-42a7-acb9-66084675118f",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544376067,
            "datetimeOfDate": 1544898600,
            "description": "dfds fdsf ds",
            "id": "9c951417-7a3a-48e0-99d4-3a7c421c44e8",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544307126,
            "datetimeOfDate": 1544898600,
            "description": "jijkl",
            "id": "d6fbdd8e-6a3b-457b-8297-afa157747577",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544306920,
            "datetimeOfDate": 1544898600,
            "description": "dfdsfsfds",
            "id": "236e7946-eef0-4b32-a594-741a33519ddf",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544306747,
            "datetimeOfDate": 1544898600,
            "description": null,
            "id": "fd9a051b-64de-49fc-880d-51945d30aa31",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544306637,
            "datetimeOfDate": 1544898600,
            "description": null,
            "id": "c872abc8-9c07-4300-86fd-be8ee0272aaf",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544306526,
            "datetimeOfDate": 1544898600,
            "description": null,
            "id": "0b50c0de-2813-476e-b6eb-2f9872687a22",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1543699949,
            "datetimeOfDate": 1544898600,
            "description": "Looking for something more mature",
            "id": "2109e038-297c-4112-be1b-2317bc132c06",
            "num_bids": 9,
            "open": true,
          },
          Object {
            "creationTime": 1543699949,
            "datetimeOfDate": 1544898600,
            "description": "I want to settle down",
            "id": "181ee4ef-dd5f-4f4a-9500-468f47c20938",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1543699949,
            "datetimeOfDate": 1544898600,
            "description": "Looking for a soulmate",
            "id": "ea2ff9d5-a4cd-43c2-8986-b83741fe2215",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1543699949,
            "datetimeOfDate": 1544898600,
            "description": "Just want to hang out",
            "id": "93907828-6742-42af-a12f-cb56b2fa2f5f",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1543699949,
            "datetimeOfDate": 1544898600,
            "description": "Looking for a drink",
            "id": "3ce7bace-d3a6-4982-a6d0-8ba7d6ab1e0b",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1543699949,
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "eb0d451b-4a73-4629-8a7e-aac9c10354be",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1543497759,
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "e8a3f3f6-4b70-4d89-90d9-5ed9d7f44e3a",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1543498030,
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "1d29cbeb-5098-4fde-ae5d-f5ca36e50b87",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1543498283,
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "68e89118-9b08-4219-a79f-54b444ed24e6",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1543498352,
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "6846fb75-d027-4c2d-870d-8251feab5827",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1543498716,
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "f0445cf3-d26c-496c-a2ae-056bc9dcd666",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1543581541,
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "56c96fb6-9c9c-432e-ace8-bac777f6d7ce",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1543581675,
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "b21bb297-bcd0-43c1-8944-b6684bb4afc2",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1543582724,
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "93f03413-5eee-45e1-8131-ea4966c20f34",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544376828,
            "datetimeOfDate": 1544812200,
            "description": "dfsfdsfsd DS fs",
            "id": "e07e4e0f-e6f9-4ba9-a865-222beaf15eb1",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544376987,
            "datetimeOfDate": 1544725800,
            "description": "fds fdsf SD fsdf dsf sd",
            "id": "e1921cc7-b39e-4a21-88cd-38a884a1e96f",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544376414,
            "datetimeOfDate": 1544639400,
            "description": "dsfsdf dsfsdf dsfsdf dsfsdf ",
            "id": "4df02d16-38be-44d0-b720-4e6c23d4ebff",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544376182,
            "datetimeOfDate": 1544639400,
            "description": "dfdsfsd sdfds dsfsd",
            "id": "5ecbdc76-f534-4640-a59c-e40e0ed57d36",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544306214,
            "datetimeOfDate": 1544306214,
            "description": "cxzczcz",
            "id": "eb7cb54f-650b-4d10-99ce-943a8b639222",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1541354972,
            "datetimeOfDate": 1541354971,
            "description": "Just a walk on the beach!",
            "id": "c39c1104-4e60-47c6-9a05-b75643407752",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1537039628,
            "datetimeOfDate": 1537039628,
            "description": "Looking for someone to walk on the beach with",
            "id": "a10d43ad-a555-43a4-849b-f1919acdccdb",
            "num_bids": 0,
            "open": true,
          },
        ],
      },
      "id": "cory.mcaboy@gmail.com",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Query.user GET_DATES id: cory.mcaboy@gmail.com 1`] = `
Object {
  "data": Object {
    "user": Object {
      "dateRequests": Object {
        "id": "cory.mcaboy@gmail.comd",
        "list": Array [
          Object {
            "creationTime": 1544376921,
            "datetimeOfDate": 1545849000,
            "description": "dsfds dsfsdf dsfsdf sd",
            "id": "0f4862f2-4618-42aa-a847-2d7c1e86922c",
            "num_bids": 1,
            "open": true,
          },
          Object {
            "creationTime": 1544376748,
            "datetimeOfDate": 1545417120,
            "description": "fsdf sdfsdf sdf",
            "id": "2625d5ad-1c9a-4096-aadb-c3aacbd75501",
            "num_bids": 1,
            "open": true,
          },
          Object {
            "creationTime": 1544886272,
            "datetimeOfDate": 1545391800,
            "description": "dsfds fds fds ",
            "id": "448f3f32-37c5-4507-884b-c5e9a0b18f09",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544390241,
            "datetimeOfDate": 1545330600,
            "description": "FD dsf DS fsdf sdf sd",
            "id": "f0407713-333c-406e-afb2-27f6e91a29f8",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544376851,
            "datetimeOfDate": 1545330600,
            "description": "dsfsdf sdff dsfsdf sd",
            "id": "91a28c7e-2dc4-4126-9b3f-319415eff62a",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544375992,
            "datetimeOfDate": 1545330600,
            "description": "dfsfdsfsd sdfds ",
            "id": "8190e10d-5a5a-48fc-98c1-c5ac375fa498",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544889092,
            "datetimeOfDate": 1545318000,
            "description": "Dead dsf dsf s",
            "id": "b070ae71-7b69-471f-b302-cfffb0544d1f",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544886462,
            "datetimeOfDate": 1545305400,
            "description": "dfdsf DS fdsf s",
            "id": "79d6eff1-0c30-4eea-87f5-dad88a6c7255",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544886387,
            "datetimeOfDate": 1545305400,
            "description": "dfds fdsf DS fsd",
            "id": "6f4cb143-263e-40f0-899c-095d457f3fa9",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544886638,
            "datetimeOfDate": 1545301500,
            "description": "fdfd fdfd sdf dsf sdf s",
            "id": "234beb5d-fdb9-4d6c-b56b-a395cc0efe6a",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544378499,
            "datetimeOfDate": 1545244200,
            "description": "if dsfdsf dsfdsf sd",
            "id": "5eca66c4-8460-4f71-b3d7-03a4f48cae99",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544886519,
            "datetimeOfDate": 1545219000,
            "description": "fds sdf dsfds DS fds sd",
            "id": "4f01717a-946f-4651-8106-201173525733",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544395123,
            "datetimeOfDate": 1544898600,
            "description": "sdfs dfdsf ds",
            "id": "22ab8c44-74c1-4abc-8d81-6ce70b1cb1ea",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544376472,
            "datetimeOfDate": 1544898600,
            "description": "fdsfds for sdf ds",
            "id": "392363cd-caa5-42a7-acb9-66084675118f",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544376067,
            "datetimeOfDate": 1544898600,
            "description": "dfds fdsf ds",
            "id": "9c951417-7a3a-48e0-99d4-3a7c421c44e8",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544307126,
            "datetimeOfDate": 1544898600,
            "description": "jijkl",
            "id": "d6fbdd8e-6a3b-457b-8297-afa157747577",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544306920,
            "datetimeOfDate": 1544898600,
            "description": "dfdsfsfds",
            "id": "236e7946-eef0-4b32-a594-741a33519ddf",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544306747,
            "datetimeOfDate": 1544898600,
            "description": null,
            "id": "fd9a051b-64de-49fc-880d-51945d30aa31",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544306637,
            "datetimeOfDate": 1544898600,
            "description": null,
            "id": "c872abc8-9c07-4300-86fd-be8ee0272aaf",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544306526,
            "datetimeOfDate": 1544898600,
            "description": null,
            "id": "0b50c0de-2813-476e-b6eb-2f9872687a22",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1543699949,
            "datetimeOfDate": 1544898600,
            "description": "Looking for something more mature",
            "id": "2109e038-297c-4112-be1b-2317bc132c06",
            "num_bids": 9,
            "open": true,
          },
          Object {
            "creationTime": 1543699949,
            "datetimeOfDate": 1544898600,
            "description": "I want to settle down",
            "id": "181ee4ef-dd5f-4f4a-9500-468f47c20938",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1543699949,
            "datetimeOfDate": 1544898600,
            "description": "Looking for a soulmate",
            "id": "ea2ff9d5-a4cd-43c2-8986-b83741fe2215",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1543699949,
            "datetimeOfDate": 1544898600,
            "description": "Just want to hang out",
            "id": "93907828-6742-42af-a12f-cb56b2fa2f5f",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1543699949,
            "datetimeOfDate": 1544898600,
            "description": "Looking for a drink",
            "id": "3ce7bace-d3a6-4982-a6d0-8ba7d6ab1e0b",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1543699949,
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "eb0d451b-4a73-4629-8a7e-aac9c10354be",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1543497759,
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "e8a3f3f6-4b70-4d89-90d9-5ed9d7f44e3a",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1543498030,
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "1d29cbeb-5098-4fde-ae5d-f5ca36e50b87",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1543498283,
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "68e89118-9b08-4219-a79f-54b444ed24e6",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1543498352,
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "6846fb75-d027-4c2d-870d-8251feab5827",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1543498716,
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "f0445cf3-d26c-496c-a2ae-056bc9dcd666",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1543581541,
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "56c96fb6-9c9c-432e-ace8-bac777f6d7ce",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1543581675,
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "b21bb297-bcd0-43c1-8944-b6684bb4afc2",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1543582724,
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "93f03413-5eee-45e1-8131-ea4966c20f34",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544376828,
            "datetimeOfDate": 1544812200,
            "description": "dfsfdsfsd DS fs",
            "id": "e07e4e0f-e6f9-4ba9-a865-222beaf15eb1",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544376987,
            "datetimeOfDate": 1544725800,
            "description": "fds fdsf SD fsdf dsf sd",
            "id": "e1921cc7-b39e-4a21-88cd-38a884a1e96f",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544376414,
            "datetimeOfDate": 1544639400,
            "description": "dsfsdf dsfsdf dsfsdf dsfsdf ",
            "id": "4df02d16-38be-44d0-b720-4e6c23d4ebff",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544376182,
            "datetimeOfDate": 1544639400,
            "description": "dfdsfsd sdfds dsfsd",
            "id": "5ecbdc76-f534-4640-a59c-e40e0ed57d36",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1544306214,
            "datetimeOfDate": 1544306214,
            "description": "cxzczcz",
            "id": "eb7cb54f-650b-4d10-99ce-943a8b639222",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1541354972,
            "datetimeOfDate": 1541354971,
            "description": "Just a walk on the beach!",
            "id": "c39c1104-4e60-47c6-9a05-b75643407752",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "creationTime": 1537039628,
            "datetimeOfDate": 1537039628,
            "description": "Looking for someone to walk on the beach with",
            "id": "a10d43ad-a555-43a4-849b-f1919acdccdb",
            "num_bids": 0,
            "open": true,
          },
        ],
      },
      "id": "cory.mcaboy@gmail.com",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Query.user GET_EDIT_PROFILE id: cory.mcaboy@gmail.com 1`] = `
Object {
  "data": Object {
    "user": Object {
      "distance": 50,
      "followerDisplay": "Both",
      "id": "cory.mcaboy@gmail.com",
      "maxAgePreference": 40,
      "minAgePreference": 22,
      "sendNotifications": true,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Query.user GET_EDIT_PROFILE no params 1`] = `
Object {
  "data": Object {
    "user": Object {
      "age": null,
      "description": "Just getting by",
      "email": "cory.mcaboy@gmail.com",
      "id": "cory.mcaboy@gmail.com",
      "name": "Jeff Smith",
      "pics": Array [
        "https://firebasestorage.googleapis.com/v0/b/manhattanmatch-9f9fe.appspot.com/o/0a7a7fdb-39d9-484d-9b24-80fa0ef66240?alt=media&token=a79482d1-44f5-46be-87a2-56bce9340b89",
        "https://firebasestorage.googleapis.com/v0/b/manhattanmatch-9f9fe.appspot.com/o/04f85f3e-63f5-4231-89dd-a45f94e96fa7?alt=media&token=6de58f19-1b2d-4041-8451-beff7287bf38",
        "https://firebasestorage.googleapis.com/v0/b/manhattanmatch-9f9fe.appspot.com/o/0a7a7fdb-39d9-484d-9b24-80fa0ef66240?alt=media&token=a79482d1-44f5-46be-87a2-56bce9340b89",
        "https://firebasestorage.googleapis.com/v0/b/manhattanmatch-9f9fe.appspot.com/o/0a7a7fdb-39d9-484d-9b24-80fa0ef66240?alt=media&token=a79482d1-44f5-46be-87a2-56bce9340b89",
        "https://firebasestorage.googleapis.com/v0/b/manhattanmatch-9f9fe.appspot.com/o/0415e065-c80c-44b5-b469-4c6370804423?alt=media&token=86cf1038-8d6e-425c-90ef-b80ee999d29b",
        "https://firebasestorage.googleapis.com/v0/b/manhattanmatch-9f9fe.appspot.com/o/0522af5a-8f39-42b1-a1ca-6e7b3e5eaf87?alt=media&token=e9bfda10-0600-41d2-a848-35a19cc26ec8",
      ],
      "school": "Will Rogers School2",
      "work": "Cerner Corporation",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Query.user GET_MATCHES id: cory.mcaboy@gmail.com 1`] = `
Object {
  "data": Object {
    "user": Object {
      "dateRequests": Object {
        "cursor": null,
        "id": "cory.mcaboy@gmail.comd",
        "list": Array [
          Object {
            "datetimeOfDate": 1545849000,
            "description": "dsfds dsfsdf dsfsdf sd",
            "id": "0f4862f2-4618-42aa-a847-2d7c1e86922c",
            "num_bids": 1,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1545417120,
            "description": "fsdf sdfsdf sdf",
            "id": "2625d5ad-1c9a-4096-aadb-c3aacbd75501",
            "num_bids": 1,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1545391800,
            "description": "dsfds fds fds ",
            "id": "448f3f32-37c5-4507-884b-c5e9a0b18f09",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1545330600,
            "description": "FD dsf DS fsdf sdf sd",
            "id": "f0407713-333c-406e-afb2-27f6e91a29f8",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1545330600,
            "description": "dsfsdf sdff dsfsdf sd",
            "id": "91a28c7e-2dc4-4126-9b3f-319415eff62a",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1545330600,
            "description": "dfsfdsfsd sdfds ",
            "id": "8190e10d-5a5a-48fc-98c1-c5ac375fa498",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1545318000,
            "description": "Dead dsf dsf s",
            "id": "b070ae71-7b69-471f-b302-cfffb0544d1f",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1545305400,
            "description": "dfdsf DS fdsf s",
            "id": "79d6eff1-0c30-4eea-87f5-dad88a6c7255",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1545305400,
            "description": "dfds fdsf DS fsd",
            "id": "6f4cb143-263e-40f0-899c-095d457f3fa9",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1545301500,
            "description": "fdfd fdfd sdf dsf sdf s",
            "id": "234beb5d-fdb9-4d6c-b56b-a395cc0efe6a",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1545244200,
            "description": "if dsfdsf dsfdsf sd",
            "id": "5eca66c4-8460-4f71-b3d7-03a4f48cae99",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1545219000,
            "description": "fds sdf dsfds DS fds sd",
            "id": "4f01717a-946f-4651-8106-201173525733",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "sdfs dfdsf ds",
            "id": "22ab8c44-74c1-4abc-8d81-6ce70b1cb1ea",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "fdsfds for sdf ds",
            "id": "392363cd-caa5-42a7-acb9-66084675118f",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "dfds fdsf ds",
            "id": "9c951417-7a3a-48e0-99d4-3a7c421c44e8",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "jijkl",
            "id": "d6fbdd8e-6a3b-457b-8297-afa157747577",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "dfdsfsfds",
            "id": "236e7946-eef0-4b32-a594-741a33519ddf",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": null,
            "id": "fd9a051b-64de-49fc-880d-51945d30aa31",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": null,
            "id": "c872abc8-9c07-4300-86fd-be8ee0272aaf",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": null,
            "id": "0b50c0de-2813-476e-b6eb-2f9872687a22",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "Looking for something more mature",
            "id": "2109e038-297c-4112-be1b-2317bc132c06",
            "num_bids": 9,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "I want to settle down",
            "id": "181ee4ef-dd5f-4f4a-9500-468f47c20938",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "Looking for a soulmate",
            "id": "ea2ff9d5-a4cd-43c2-8986-b83741fe2215",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "Just want to hang out",
            "id": "93907828-6742-42af-a12f-cb56b2fa2f5f",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "Looking for a drink",
            "id": "3ce7bace-d3a6-4982-a6d0-8ba7d6ab1e0b",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "eb0d451b-4a73-4629-8a7e-aac9c10354be",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "e8a3f3f6-4b70-4d89-90d9-5ed9d7f44e3a",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "1d29cbeb-5098-4fde-ae5d-f5ca36e50b87",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "68e89118-9b08-4219-a79f-54b444ed24e6",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "6846fb75-d027-4c2d-870d-8251feab5827",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "f0445cf3-d26c-496c-a2ae-056bc9dcd666",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "56c96fb6-9c9c-432e-ace8-bac777f6d7ce",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "b21bb297-bcd0-43c1-8944-b6684bb4afc2",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "93f03413-5eee-45e1-8131-ea4966c20f34",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544812200,
            "description": "dfsfdsfsd DS fs",
            "id": "e07e4e0f-e6f9-4ba9-a865-222beaf15eb1",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544725800,
            "description": "fds fdsf SD fsdf dsf sd",
            "id": "e1921cc7-b39e-4a21-88cd-38a884a1e96f",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544639400,
            "description": "dsfsdf dsfsdf dsfsdf dsfsdf ",
            "id": "4df02d16-38be-44d0-b720-4e6c23d4ebff",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544639400,
            "description": "dfdsfsd sdfds dsfsd",
            "id": "5ecbdc76-f534-4640-a59c-e40e0ed57d36",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544306214,
            "description": "cxzczcz",
            "id": "eb7cb54f-650b-4d10-99ce-943a8b639222",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1541354971,
            "description": "Just a walk on the beach!",
            "id": "c39c1104-4e60-47c6-9a05-b75643407752",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1537039628,
            "description": "Looking for someone to walk on the beach with",
            "id": "a10d43ad-a555-43a4-849b-f1919acdccdb",
            "num_bids": 0,
            "open": true,
          },
        ],
      },
      "id": "cory.mcaboy@gmail.com",
      "matchedDates": Object {
        "id": "cory.mcaboy@gmail.comm",
        "list": Array [],
      },
      "name": "Jeff Smith",
      "profilePic": "https://firebasestorage.googleapis.com/v0/b/manhattanmatch-9f9fe.appspot.com/o/0a7a7fdb-39d9-484d-9b24-80fa0ef66240?alt=media&token=a79482d1-44f5-46be-87a2-56bce9340b89",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Query.user GET_MATCHES no params 1`] = `
Object {
  "data": Object {
    "user": Object {
      "dateRequests": Object {
        "cursor": null,
        "id": "cory.mcaboy@gmail.comd",
        "list": Array [
          Object {
            "datetimeOfDate": 1545849000,
            "description": "dsfds dsfsdf dsfsdf sd",
            "id": "0f4862f2-4618-42aa-a847-2d7c1e86922c",
            "num_bids": 1,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1545417120,
            "description": "fsdf sdfsdf sdf",
            "id": "2625d5ad-1c9a-4096-aadb-c3aacbd75501",
            "num_bids": 1,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1545391800,
            "description": "dsfds fds fds ",
            "id": "448f3f32-37c5-4507-884b-c5e9a0b18f09",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1545330600,
            "description": "FD dsf DS fsdf sdf sd",
            "id": "f0407713-333c-406e-afb2-27f6e91a29f8",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1545330600,
            "description": "dsfsdf sdff dsfsdf sd",
            "id": "91a28c7e-2dc4-4126-9b3f-319415eff62a",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1545330600,
            "description": "dfsfdsfsd sdfds ",
            "id": "8190e10d-5a5a-48fc-98c1-c5ac375fa498",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1545318000,
            "description": "Dead dsf dsf s",
            "id": "b070ae71-7b69-471f-b302-cfffb0544d1f",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1545305400,
            "description": "dfdsf DS fdsf s",
            "id": "79d6eff1-0c30-4eea-87f5-dad88a6c7255",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1545305400,
            "description": "dfds fdsf DS fsd",
            "id": "6f4cb143-263e-40f0-899c-095d457f3fa9",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1545301500,
            "description": "fdfd fdfd sdf dsf sdf s",
            "id": "234beb5d-fdb9-4d6c-b56b-a395cc0efe6a",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1545244200,
            "description": "if dsfdsf dsfdsf sd",
            "id": "5eca66c4-8460-4f71-b3d7-03a4f48cae99",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1545219000,
            "description": "fds sdf dsfds DS fds sd",
            "id": "4f01717a-946f-4651-8106-201173525733",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "sdfs dfdsf ds",
            "id": "22ab8c44-74c1-4abc-8d81-6ce70b1cb1ea",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "fdsfds for sdf ds",
            "id": "392363cd-caa5-42a7-acb9-66084675118f",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "dfds fdsf ds",
            "id": "9c951417-7a3a-48e0-99d4-3a7c421c44e8",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "jijkl",
            "id": "d6fbdd8e-6a3b-457b-8297-afa157747577",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "dfdsfsfds",
            "id": "236e7946-eef0-4b32-a594-741a33519ddf",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": null,
            "id": "fd9a051b-64de-49fc-880d-51945d30aa31",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": null,
            "id": "c872abc8-9c07-4300-86fd-be8ee0272aaf",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": null,
            "id": "0b50c0de-2813-476e-b6eb-2f9872687a22",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "Looking for something more mature",
            "id": "2109e038-297c-4112-be1b-2317bc132c06",
            "num_bids": 9,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "I want to settle down",
            "id": "181ee4ef-dd5f-4f4a-9500-468f47c20938",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "Looking for a soulmate",
            "id": "ea2ff9d5-a4cd-43c2-8986-b83741fe2215",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "Just want to hang out",
            "id": "93907828-6742-42af-a12f-cb56b2fa2f5f",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "Looking for a drink",
            "id": "3ce7bace-d3a6-4982-a6d0-8ba7d6ab1e0b",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "eb0d451b-4a73-4629-8a7e-aac9c10354be",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "e8a3f3f6-4b70-4d89-90d9-5ed9d7f44e3a",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "1d29cbeb-5098-4fde-ae5d-f5ca36e50b87",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "68e89118-9b08-4219-a79f-54b444ed24e6",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "6846fb75-d027-4c2d-870d-8251feab5827",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "f0445cf3-d26c-496c-a2ae-056bc9dcd666",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "56c96fb6-9c9c-432e-ace8-bac777f6d7ce",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "b21bb297-bcd0-43c1-8944-b6684bb4afc2",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544898600,
            "description": "Looking for a walk of the beach",
            "id": "93f03413-5eee-45e1-8131-ea4966c20f34",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544812200,
            "description": "dfsfdsfsd DS fs",
            "id": "e07e4e0f-e6f9-4ba9-a865-222beaf15eb1",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544725800,
            "description": "fds fdsf SD fsdf dsf sd",
            "id": "e1921cc7-b39e-4a21-88cd-38a884a1e96f",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544639400,
            "description": "dsfsdf dsfsdf dsfsdf dsfsdf ",
            "id": "4df02d16-38be-44d0-b720-4e6c23d4ebff",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544639400,
            "description": "dfdsfsd sdfds dsfsd",
            "id": "5ecbdc76-f534-4640-a59c-e40e0ed57d36",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1544306214,
            "description": "cxzczcz",
            "id": "eb7cb54f-650b-4d10-99ce-943a8b639222",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1541354971,
            "description": "Just a walk on the beach!",
            "id": "c39c1104-4e60-47c6-9a05-b75643407752",
            "num_bids": 0,
            "open": true,
          },
          Object {
            "datetimeOfDate": 1537039628,
            "description": "Looking for someone to walk on the beach with",
            "id": "a10d43ad-a555-43a4-849b-f1919acdccdb",
            "num_bids": 0,
            "open": true,
          },
        ],
      },
      "id": "cory.mcaboy@gmail.com",
      "matchedDates": Object {
        "id": "cory.mcaboy@gmail.comm",
        "list": Array [],
      },
      "name": "Jeff Smith",
      "profilePic": "https://firebasestorage.googleapis.com/v0/b/manhattanmatch-9f9fe.appspot.com/o/0a7a7fdb-39d9-484d-9b24-80fa0ef66240?alt=media&token=a79482d1-44f5-46be-87a2-56bce9340b89",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Query.user GET_QUEUE id: cory.mcaboy@gmail.com 1`] = `
Object {
  "data": Object {
    "user": Object {
      "followerDisplay": "Both",
      "id": "cory.mcaboy@gmail.com",
      "queue": Object {
        "cursor": 47.022502878818635,
        "id": "cory.mcaboy@gmail.comq",
        "list": Array [
          Object {
            "age": null,
            "description": "Portugal index Handmade Rustic SSL Small monitor killer Ports Associate",
            "distanceApart": 12.795188589352723,
            "hasDateOpen": true,
            "id": "Shakira23@hotmail.com",
            "isFollowing": true,
            "name": "Ernesto Hartmann",
            "order": 6.397594294676361,
            "pics": Array [
              "https://s3.amazonaws.com/uifaces/faces/twitter/murrayswift/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/ooomz/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/evanshajed/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/johndezember/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/andrewabogado/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/joetruesdell/128.jpg",
            ],
            "profilePic": "https://s3.amazonaws.com/uifaces/faces/twitter/murrayswift/128.jpg",
            "school": "King - DuBuque",
            "work": "Robel, Runte and Rath",
          },
          Object {
            "age": null,
            "description": "compressing web-readiness rich Administrator Specialist Tuna connecting Money Market Account Engineer program",
            "distanceApart": 29.570178022098194,
            "hasDateOpen": true,
            "id": "Orrin.Morissette@gmail.com",
            "isFollowing": true,
            "name": "Mrs. Modesto Kuhlman",
            "order": 14.785089011049097,
            "pics": Array [
              "https://s3.amazonaws.com/uifaces/faces/twitter/gabrielizalo/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/aroon_sharma/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/j2deme/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/rohixx/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/caspergrl/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/xripunov/128.jpg",
            ],
            "profilePic": "https://s3.amazonaws.com/uifaces/faces/twitter/gabrielizalo/128.jpg",
            "school": "Bernhard Group",
            "work": "Schowalter, Ernser and Rogahn",
          },
          Object {
            "age": null,
            "description": "invoice Investment Account payment Metal wireless deposit Saint Helena Pound Handmade Plastic Cheese Intelligent Overpass",
            "distanceApart": 41.18100369103639,
            "hasDateOpen": true,
            "id": "Madonna_Conroy6@gmail.com",
            "isFollowing": false,
            "name": "Lorenz Ebert III",
            "order": 41.18100369103639,
            "pics": Array [
              "https://s3.amazonaws.com/uifaces/faces/twitter/thinkleft/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/funwatercat/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/linux29/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/jagan123/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/tweetubhai/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/ajaxy_ru/128.jpg",
            ],
            "profilePic": "https://s3.amazonaws.com/uifaces/faces/twitter/thinkleft/128.jpg",
            "school": "Stoltenberg, Johns and Jerde",
            "work": "Rowe Group",
          },
          Object {
            "age": null,
            "description": "implementation Officer Orchestrator Fantastic Soft Pizza Fresh scale local area network Unbranded Personal Loan Account Delaware",
            "distanceApart": 42.617330050711836,
            "hasDateOpen": true,
            "id": "Sabrina_Hilll@yahoo.com",
            "isFollowing": false,
            "name": "Rosendo Wolff",
            "order": 42.617330050711836,
            "pics": Array [
              "https://s3.amazonaws.com/uifaces/faces/twitter/longlivemyword/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/vigobronx/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/vivekprvr/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/johannesneu/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/justinrgraham/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/allthingssmitty/128.jpg",
            ],
            "profilePic": "https://s3.amazonaws.com/uifaces/faces/twitter/longlivemyword/128.jpg",
            "school": "Bednar LLC",
            "work": "Reynolds - Rempel",
          },
          Object {
            "age": null,
            "description": "Quality Forward wireless Australian Dollar Dynamic deposit directional Group orchestrate Village",
            "distanceApart": 47.022502878818635,
            "hasDateOpen": true,
            "id": "Hunter.Bechtelar3@gmail.com",
            "isFollowing": false,
            "name": "Bennett Reilly",
            "order": 47.022502878818635,
            "pics": Array [
              "https://s3.amazonaws.com/uifaces/faces/twitter/vigobronx/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/madcampos/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/jervo/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/anjhero/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/themikenagle/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/felipecsl/128.jpg",
            ],
            "profilePic": "https://s3.amazonaws.com/uifaces/faces/twitter/vigobronx/128.jpg",
            "school": "Osinski and Sons",
            "work": "Murazik, Walker and Mills",
          },
        ],
      },
      "token": "en6tLNgIRu0:APA91bHlpS3BnhKzNf-qGhDjCVw3VbvFQw9T9qLFlzPo1ZuL5zxSSp63o1BT54SANw2-RhnQ-D3yh-i2NPJPLfrQI-Y1Gy9quB7wDni94zUA4sCAOybeAlhTzfJ6h51QyUEiZ-Lwpl0B",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Query.user GET_QUEUE no params 1`] = `
Object {
  "data": Object {
    "user": Object {
      "followerDisplay": "Both",
      "id": "cory.mcaboy@gmail.com",
      "queue": Object {
        "cursor": 47.022502878818635,
        "id": "cory.mcaboy@gmail.comq",
        "list": Array [
          Object {
            "age": null,
            "description": "Portugal index Handmade Rustic SSL Small monitor killer Ports Associate",
            "distanceApart": 12.795188589352723,
            "hasDateOpen": true,
            "id": "Shakira23@hotmail.com",
            "isFollowing": true,
            "name": "Ernesto Hartmann",
            "order": 6.397594294676361,
            "pics": Array [
              "https://s3.amazonaws.com/uifaces/faces/twitter/murrayswift/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/ooomz/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/evanshajed/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/johndezember/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/andrewabogado/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/joetruesdell/128.jpg",
            ],
            "profilePic": "https://s3.amazonaws.com/uifaces/faces/twitter/murrayswift/128.jpg",
            "school": "King - DuBuque",
            "work": "Robel, Runte and Rath",
          },
          Object {
            "age": null,
            "description": "compressing web-readiness rich Administrator Specialist Tuna connecting Money Market Account Engineer program",
            "distanceApart": 29.570178022098194,
            "hasDateOpen": true,
            "id": "Orrin.Morissette@gmail.com",
            "isFollowing": true,
            "name": "Mrs. Modesto Kuhlman",
            "order": 14.785089011049097,
            "pics": Array [
              "https://s3.amazonaws.com/uifaces/faces/twitter/gabrielizalo/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/aroon_sharma/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/j2deme/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/rohixx/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/caspergrl/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/xripunov/128.jpg",
            ],
            "profilePic": "https://s3.amazonaws.com/uifaces/faces/twitter/gabrielizalo/128.jpg",
            "school": "Bernhard Group",
            "work": "Schowalter, Ernser and Rogahn",
          },
          Object {
            "age": null,
            "description": "invoice Investment Account payment Metal wireless deposit Saint Helena Pound Handmade Plastic Cheese Intelligent Overpass",
            "distanceApart": 41.18100369103639,
            "hasDateOpen": true,
            "id": "Madonna_Conroy6@gmail.com",
            "isFollowing": false,
            "name": "Lorenz Ebert III",
            "order": 41.18100369103639,
            "pics": Array [
              "https://s3.amazonaws.com/uifaces/faces/twitter/thinkleft/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/funwatercat/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/linux29/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/jagan123/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/tweetubhai/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/ajaxy_ru/128.jpg",
            ],
            "profilePic": "https://s3.amazonaws.com/uifaces/faces/twitter/thinkleft/128.jpg",
            "school": "Stoltenberg, Johns and Jerde",
            "work": "Rowe Group",
          },
          Object {
            "age": null,
            "description": "implementation Officer Orchestrator Fantastic Soft Pizza Fresh scale local area network Unbranded Personal Loan Account Delaware",
            "distanceApart": 42.617330050711836,
            "hasDateOpen": true,
            "id": "Sabrina_Hilll@yahoo.com",
            "isFollowing": false,
            "name": "Rosendo Wolff",
            "order": 42.617330050711836,
            "pics": Array [
              "https://s3.amazonaws.com/uifaces/faces/twitter/longlivemyword/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/vigobronx/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/vivekprvr/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/johannesneu/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/justinrgraham/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/allthingssmitty/128.jpg",
            ],
            "profilePic": "https://s3.amazonaws.com/uifaces/faces/twitter/longlivemyword/128.jpg",
            "school": "Bednar LLC",
            "work": "Reynolds - Rempel",
          },
          Object {
            "age": null,
            "description": "Quality Forward wireless Australian Dollar Dynamic deposit directional Group orchestrate Village",
            "distanceApart": 47.022502878818635,
            "hasDateOpen": true,
            "id": "Hunter.Bechtelar3@gmail.com",
            "isFollowing": false,
            "name": "Bennett Reilly",
            "order": 47.022502878818635,
            "pics": Array [
              "https://s3.amazonaws.com/uifaces/faces/twitter/vigobronx/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/madcampos/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/jervo/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/anjhero/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/themikenagle/128.jpg",
              "https://s3.amazonaws.com/uifaces/faces/twitter/felipecsl/128.jpg",
            ],
            "profilePic": "https://s3.amazonaws.com/uifaces/faces/twitter/vigobronx/128.jpg",
            "school": "Osinski and Sons",
            "work": "Murazik, Walker and Mills",
          },
        ],
      },
      "token": "en6tLNgIRu0:APA91bHlpS3BnhKzNf-qGhDjCVw3VbvFQw9T9qLFlzPo1ZuL5zxSSp63o1BT54SANw2-RhnQ-D3yh-i2NPJPLfrQI-Y1Gy9quB7wDni94zUA4sCAOybeAlhTzfJ6h51QyUEiZ-Lwpl0B",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Query.user GET_SETTINGS id: cory.mcaboy@gmail.com 1`] = `
Object {
  "data": Object {
    "user": Object {
      "distance": 50,
      "followerDisplay": "Both",
      "id": "cory.mcaboy@gmail.com",
      "maxAgePreference": 40,
      "minAgePreference": 22,
      "sendNotifications": true,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Query.user GET_SETTINGS no params 1`] = `
Object {
  "data": Object {
    "user": Object {
      "distance": 50,
      "followerDisplay": "Both",
      "id": "cory.mcaboy@gmail.com",
      "maxAgePreference": 40,
      "minAgePreference": 22,
      "sendNotifications": true,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Query.user GET_USER_PROFILE id: cory.mcaboy@gmail.com 1`] = `
Object {
  "data": Object {
    "user": Object {
      "description": "Just getting by",
      "distanceApart": 0,
      "hasDateOpen": true,
      "id": "cory.mcaboy@gmail.com",
      "isFollowing": false,
      "name": "Jeff Smith",
      "pics": Array [
        "https://firebasestorage.googleapis.com/v0/b/manhattanmatch-9f9fe.appspot.com/o/0a7a7fdb-39d9-484d-9b24-80fa0ef66240?alt=media&token=a79482d1-44f5-46be-87a2-56bce9340b89",
        "https://firebasestorage.googleapis.com/v0/b/manhattanmatch-9f9fe.appspot.com/o/04f85f3e-63f5-4231-89dd-a45f94e96fa7?alt=media&token=6de58f19-1b2d-4041-8451-beff7287bf38",
        "https://firebasestorage.googleapis.com/v0/b/manhattanmatch-9f9fe.appspot.com/o/0a7a7fdb-39d9-484d-9b24-80fa0ef66240?alt=media&token=a79482d1-44f5-46be-87a2-56bce9340b89",
        "https://firebasestorage.googleapis.com/v0/b/manhattanmatch-9f9fe.appspot.com/o/0a7a7fdb-39d9-484d-9b24-80fa0ef66240?alt=media&token=a79482d1-44f5-46be-87a2-56bce9340b89",
        "https://firebasestorage.googleapis.com/v0/b/manhattanmatch-9f9fe.appspot.com/o/0415e065-c80c-44b5-b469-4c6370804423?alt=media&token=86cf1038-8d6e-425c-90ef-b80ee999d29b",
        "https://firebasestorage.googleapis.com/v0/b/manhattanmatch-9f9fe.appspot.com/o/0522af5a-8f39-42b1-a1ca-6e7b3e5eaf87?alt=media&token=e9bfda10-0600-41d2-a848-35a19cc26ec8",
      ],
      "school": "Will Rogers School2",
      "work": "Cerner Corporation",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Query.user GET_USER_PROFILE no params 1`] = `
Object {
  "data": Object {
    "user": Object {
      "description": "Just getting by",
      "distanceApart": 0,
      "hasDateOpen": true,
      "id": "cory.mcaboy@gmail.com",
      "isFollowing": false,
      "name": "Jeff Smith",
      "pics": Array [
        "https://firebasestorage.googleapis.com/v0/b/manhattanmatch-9f9fe.appspot.com/o/0a7a7fdb-39d9-484d-9b24-80fa0ef66240?alt=media&token=a79482d1-44f5-46be-87a2-56bce9340b89",
        "https://firebasestorage.googleapis.com/v0/b/manhattanmatch-9f9fe.appspot.com/o/04f85f3e-63f5-4231-89dd-a45f94e96fa7?alt=media&token=6de58f19-1b2d-4041-8451-beff7287bf38",
        "https://firebasestorage.googleapis.com/v0/b/manhattanmatch-9f9fe.appspot.com/o/0a7a7fdb-39d9-484d-9b24-80fa0ef66240?alt=media&token=a79482d1-44f5-46be-87a2-56bce9340b89",
        "https://firebasestorage.googleapis.com/v0/b/manhattanmatch-9f9fe.appspot.com/o/0a7a7fdb-39d9-484d-9b24-80fa0ef66240?alt=media&token=a79482d1-44f5-46be-87a2-56bce9340b89",
        "https://firebasestorage.googleapis.com/v0/b/manhattanmatch-9f9fe.appspot.com/o/0415e065-c80c-44b5-b469-4c6370804423?alt=media&token=86cf1038-8d6e-425c-90ef-b80ee999d29b",
        "https://firebasestorage.googleapis.com/v0/b/manhattanmatch-9f9fe.appspot.com/o/0522af5a-8f39-42b1-a1ca-6e7b3e5eaf87?alt=media&token=e9bfda10-0600-41d2-a848-35a19cc26ec8",
      ],
      "school": "Will Rogers School2",
      "work": "Cerner Corporation",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
